--- a/FrontWeb/src/App.css
+++ b/FrontWeb/src/App.css
@@ -60,3 +60,11 @@
   flex: 1;
   font-size: 16px;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  margin: 0 25%;
+  max-width: 100%;
+}
